--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run genkit:watch",
-    "genkit:dev": "genkit start src/ai/dev.ts",
-    "genkit:watch": "genkit start --watch src/ai/dev.ts",
+    "dev": "npm run genkit:start",
+    "genkit:start": "genkit start",
+    "genkit:dev": "genkit start",
+    "genkit:watch": "genkit start",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,13 +32,13 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
